Сделал конфигурацию для SSH.